# example-ml

./: .envrc  .gitignore  .gitleaks.toml  .gitlint  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
airflow_dags/: example_ml_dag.py
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_science.yml
data/01_raw/: personalities_dataset.csv.dvc
docs/source/: conf.py  index.rst
infra/: .gitignore  kustomization.yaml
infra/airflow/: application.yaml  credentials.sealedsecret.yaml  kustomization.yaml  postgres.sealedsecret.yaml  repo.sealedsecret.yaml  tmp.yaml
infra/argocd/: example-ml-repo.sealedsecret.yaml  gitops.yaml  kustomization.yaml  project.yaml
infra/example-ml/: .gitignore  inference-service.example.yaml  inference-service.yaml  kustomization.yaml  namespace.yaml  s3.sealedsecret.yaml  service-account.yaml
infra/kserve/: application.yaml  crds.yaml  kustomization.yaml  namespace.yaml
infra/kubeflow/: docker-repo.sealedsecret.yaml  ingress.yaml  kustomization.yaml  service-account.patch.yaml
infra/mlflow/: application.yaml  kustomization.yaml  namespace.yaml
src/example_ml/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/example_ml/pipelines/data_processing/: nodes.py  pipeline.py
src/example_ml/pipelines/personality/data_processing/: nodes.py  pipeline.py
src/example_ml/pipelines/personality/data_science/: nodes.py  pipeline.py
src/example_ml/pipelines/personality/reporting/: nodes.py  pipeline.py
tests/pipelines/data_science/: test_pipeline.py
